# LitePhys

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: example_bvh_ccd.cpp  example_collisions_3d.cpp  example_collisions_4d.cpp  example_destruction_3d.cpp  example_gjk_3d.cpp  example_gjk_4d.cpp  example_gravity.cpp  example_gravity_4d.cpp  example_kinematics_3d.cpp  example_multithreaded_100k.cpp  example_optics_3d.cpp  example_optics_4d.cpp  example_rigidbody_3d.cpp  example_rigidbody_4d.cpp  example_softbody_3d.cpp  example_softbody_4d.cpp  example_vehicle_3d.cpp
include/litephys/: LiteCollisions3D.h  LiteCollisions4D.h  LiteOptics3D.h  LiteOptics4D.h  LitePhys3D.h  LitePhys4D.h  LiteRigidBody3D.h  LiteRigidBody4D.h  LiteSoftBody3D.h  LiteSoftBody4D.h
include/litephys/collisions3d/: AABB3D.h  BVH3D.h  CCD3D.h  CollidableParticle.h  CollisionResolver3D.h  EPA3D.h  GJK3D.h  ParallelCollisionResolver3D.h  Ray3D.h  Shapes3D.h  SpatialHash3D.h
include/litephys/collisions4d/: AABB4D.h  BVH4D.h  CCD4D.h  CollidableParticle4D.h  CollisionResolver4D.h  EPA4D.h  GJK4D.h  Ray4D.h  Shapes4D.h  SpatialHash4D.h
include/litephys/dynamics3d/: Explosion3D.h  Fracture3D.h
include/litephys/kinematics3d/: Bone3D.h  IK3D.h  Skeleton3D.h
include/litephys/math/: Bivector4.h  Matrix3.h  Matrix4.h  Matrix6.h  Precision.h  Quaternion.h  Random.h  Vector3.h  Vector4.h
include/litephys/optics3d/: Geometry3D.h  OpticsSolver3D.h  OpticsWorld3D.h  Ray3D.h
include/litephys/optics4d/: Geometry4D.h  OpticsSolver4D.h  OpticsWorld4D.h  Ray4D.h
include/litephys/particles3d/: ForceGenerator.h  ForceSolver3D.h  Gravity.h  Integrator3D.h  ParallelIntegrator3D.h  Particle.h  PhysicsState3D.h  Spring.h  World.h
include/litephys/particles4d/: ForceGenerator4D.h  ForceSolver4D.h  Gravity4D.h  Integrator4D.h  Particle4D.h  PhysicsState4D.h  Spring4D.h  World4D.h
include/litephys/rigidbody3d/: CollisionManifold3D.h  RigidBodyCollisionResolver3D.h  RigidBodyForceSolver3D.h  RigidBodyIntegrator3D.h  RigidBodyState3D.h
include/litephys/rigidbody4d/: CollisionManifold4D.h  RigidBodyCollisionResolver4D.h  RigidBodyForceSolver4D.h  RigidBodyIntegrator4D.h  RigidBodyState4D.h
include/litephys/softbody3d/: SoftBodyForceSolver3D.h  SoftBodyGenerator3D.h  SoftBodyIntegrator3D.h  SoftBodyState3D.h
include/litephys/softbody4d/: SoftBodyForceSolver4D.h  SoftBodyGenerator4D.h  SoftBodyIntegrator4D.h  SoftBodyState4D.h
include/litephys/vehicles3d/: RaycastVehicle3D.h  WheelState3D.h
