cmake_minimum_required(VERSION 3.10)
project(LitePhys)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(Threads REQUIRED)
link_libraries(Threads::Threads)

# Add include directory for the library
include_directories(include)

# Executables for examples
add_executable(example_gravity examples/example_gravity.cpp)
add_executable(example_gravity_4d examples/example_gravity_4d.cpp)
add_executable(example_optics_3d examples/example_optics_3d.cpp)
target_include_directories(example_optics_3d PRIVATE include)
add_executable(example_optics_4d examples/example_optics_4d.cpp)
target_include_directories(example_optics_4d PRIVATE include)
add_executable(example_collisions_3d examples/example_collisions_3d.cpp)
add_executable(example_collisions_4d examples/example_collisions_4d.cpp)
add_executable(example_rigidbody_3d examples/example_rigidbody_3d.cpp)
target_include_directories(example_rigidbody_3d PRIVATE include)

add_executable(example_rigidbody_4d examples/example_rigidbody_4d.cpp)
target_include_directories(example_rigidbody_4d PRIVATE include)

add_executable(example_softbody_3d examples/example_softbody_3d.cpp)
target_include_directories(example_softbody_3d PRIVATE include)

add_executable(example_softbody_4d examples/example_softbody_4d.cpp)
target_include_directories(example_softbody_4d PRIVATE include)

add_executable(example_multithreaded_100k examples/example_multithreaded_100k.cpp)
target_include_directories(example_multithreaded_100k PRIVATE include)

add_executable(example_gjk_3d examples/example_gjk_3d.cpp)
target_include_directories(example_gjk_3d PRIVATE include)

add_executable(example_gjk_4d examples/example_gjk_4d.cpp)
target_include_directories(example_gjk_4d PRIVATE include)

add_executable(example_bvh_ccd examples/example_bvh_ccd.cpp)
target_include_directories(example_bvh_ccd PRIVATE include)

add_executable(example_vehicle_3d examples/example_vehicle_3d.cpp)
target_include_directories(example_vehicle_3d PRIVATE include)
